--- a/archives/toutiao-search/2023-10-18.md
+++ b/archives/toutiao-search/2023-10-18.md
@@ -1,80 +1,84 @@
 # 2023-10-18
 
-共 74 条
+共 78 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Wed Oct 18 2023 02:01:03 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Wed Oct 18 2023 03:00:40 GMT+0800 (China Standard Time) -->
 1. [普京抵达人民大会堂](https://so.toutiao.com/search?keyword=普京抵达人民大会堂)
 1. [司机发现车后座躺了个婴儿](https://so.toutiao.com/search?keyword=司机发现车后座躺了个婴儿)
 1. [全力以赴保障粮食丰收](https://so.toutiao.com/search?keyword=全力以赴保障粮食丰收)
 1. [普京抵达北京哪些信息值得关注](https://so.toutiao.com/search?keyword=普京抵达北京哪些信息值得关注)
 1. [美国天然气“老赖”坑了中石化](https://so.toutiao.com/search?keyword=美国天然气“老赖”坑了中石化)
-1. [以军：地面部队做好进入加沙准备](https://so.toutiao.com/search?keyword=以军：地面部队做好进入加沙准备)
 1. [农民工高处坠落被5根钢筋扎穿](https://so.toutiao.com/search?keyword=农民工高处坠落被5根钢筋扎穿)
-1. [女子闻刚脱下的臭袜子感染真菌肺炎](https://so.toutiao.com/search?keyword=女子闻刚脱下的臭袜子感染真菌肺炎)
-1. [无锡工厂爆燃致2死3伤为假消息](https://so.toutiao.com/search?keyword=无锡工厂爆燃致2死3伤为假消息)
 1. [司机帮乘客取行李 自己的车被撞飞](https://so.toutiao.com/search?keyword=司机帮乘客取行李+自己的车被撞飞)
+1. [廖昌永追忆谷村新司](https://so.toutiao.com/search?keyword=廖昌永追忆谷村新司)
+1. [无锡工厂爆燃致2死3伤为假消息](https://so.toutiao.com/search?keyword=无锡工厂爆燃致2死3伤为假消息)
+1. [43岁男子感慨自己是“四无人员”](https://so.toutiao.com/search?keyword=43岁男子感慨自己是“四无人员”)
 1. [曝以色列在消灭哈马斯前不考虑停火](https://so.toutiao.com/search?keyword=曝以色列在消灭哈马斯前不考虑停火)
-1. [女明星外穿钻石内裤惹争议](https://so.toutiao.com/search?keyword=女明星外穿钻石内裤惹争议)
-1. [哈马斯首次公布被扣人质视频画面](https://so.toutiao.com/search?keyword=哈马斯首次公布被扣人质视频画面)
 1. [特朗普对巴以冲突最新表态](https://so.toutiao.com/search?keyword=特朗普对巴以冲突最新表态)
+1. [女明星外穿钻石内裤惹争议](https://so.toutiao.com/search?keyword=女明星外穿钻石内裤惹争议)
+1. [以称不会因拜登推迟在加沙地面行动](https://so.toutiao.com/search?keyword=以称不会因拜登推迟在加沙地面行动)
+1. [哈马斯首次公布被扣人质视频画面](https://so.toutiao.com/search?keyword=哈马斯首次公布被扣人质视频画面)
 1. [外媒：以正将美国拖入与伊朗的战争](https://so.toutiao.com/search?keyword=外媒：以正将美国拖入与伊朗的战争)
 1. [江映蓉偶遇苹果CEO库克](https://so.toutiao.com/search?keyword=江映蓉偶遇苹果CEO库克)
-1. [43岁男子感慨自己是“四无人员”](https://so.toutiao.com/search?keyword=43岁男子感慨自己是“四无人员”)
+1. [外交部回应日本歌手谷村新司去世](https://so.toutiao.com/search?keyword=外交部回应日本歌手谷村新司去世)
 1. [华为手机整体销量超越苹果](https://so.toutiao.com/search?keyword=华为手机整体销量超越苹果)
-1. [“腾讯待办”关停](https://so.toutiao.com/search?keyword=“腾讯待办”关停)
+1. [女子闻刚脱下的臭袜子感染真菌肺炎](https://so.toutiao.com/search?keyword=女子闻刚脱下的臭袜子感染真菌肺炎)
 1. [全红婵接受采访“讨价还价”](https://so.toutiao.com/search?keyword=全红婵接受采访“讨价还价”)
-1. [“科目三”舞蹈怎么跳](https://so.toutiao.com/search?keyword=“科目三”舞蹈怎么跳)
 1. [杨紫琼等8人当选国际奥委会委员](https://so.toutiao.com/search?keyword=杨紫琼等8人当选国际奥委会委员)
-1. [成都济南合肥取消地价限制](https://so.toutiao.com/search?keyword=成都济南合肥取消地价限制)
+1. [街道办回应男子自捆双脚跳河自尽](https://so.toutiao.com/search?keyword=街道办回应男子自捆双脚跳河自尽)
+1. [iPhone15Pro被曝生产成本523美元](https://so.toutiao.com/search?keyword=iPhone15Pro被曝生产成本523美元)
+1. [“科目三”舞蹈怎么跳](https://so.toutiao.com/search?keyword=“科目三”舞蹈怎么跳)
+1. [河南一楼盘现“豆腐渣”楼板](https://so.toutiao.com/search?keyword=河南一楼盘现“豆腐渣”楼板)
+1. [央广网：杜绝狗咬人要盯住养狗人](https://so.toutiao.com/search?keyword=央广网：杜绝狗咬人要盯住养狗人)
+1. [自然资源部发文建议取消地价上限](https://so.toutiao.com/search?keyword=自然资源部发文建议取消地价上限)
 1. [苹果CEO库克谈王者荣耀：风靡全球](https://so.toutiao.com/search?keyword=苹果CEO库克谈王者荣耀：风靡全球)
+1. [韩媒嘲讽中国男足：史上最差](https://so.toutiao.com/search?keyword=韩媒嘲讽中国男足：史上最差)
+1. [成都济南合肥取消地价限制](https://so.toutiao.com/search?keyword=成都济南合肥取消地价限制)
+1. [夫妻30岁裸辞旅行治愈百万网友](https://so.toutiao.com/search?keyword=夫妻30岁裸辞旅行治愈百万网友)
+1. [美欲阻止英伟达等出口高性能AI芯片](https://so.toutiao.com/search?keyword=美欲阻止英伟达等出口高性能AI芯片)
+1. [碧桂园所持6368万股权被冻结](https://so.toutiao.com/search?keyword=碧桂园所持6368万股权被冻结)
+1. [丹麦王室寻找遗落鞋子的“灰姑娘”](https://so.toutiao.com/search?keyword=丹麦王室寻找遗落鞋子的“灰姑娘”)
+1. [德国总理朔尔茨走红毯“迷路了”](https://so.toutiao.com/search?keyword=德国总理朔尔茨走红毯“迷路了”)
+1. [网传威马汽车创始人“出走”海外](https://so.toutiao.com/search?keyword=网传威马汽车创始人“出走”海外)
+1. [高中同学车祸失忆全班守护18年](https://so.toutiao.com/search?keyword=高中同学车祸失忆全班守护18年)
+1. [媒体评黄光裕遭国美App弹窗怒怼](https://so.toutiao.com/search?keyword=媒体评黄光裕遭国美App弹窗怒怼)
+1. [“腾讯待办”关停](https://so.toutiao.com/search?keyword=“腾讯待办”关停)
+1. [网友去台湾旅游总结8个特点](https://so.toutiao.com/search?keyword=网友去台湾旅游总结8个特点)
+1. [泰国副总理谈共建“一带一路”倡议](https://so.toutiao.com/search?keyword=泰国副总理谈共建“一带一路”倡议)
+1. [朝鲜表态：不会放弃或改变拥核立场](https://so.toutiao.com/search?keyword=朝鲜表态：不会放弃或改变拥核立场)
+1. [南航回应飞机餐发4个馒头1片白菜](https://so.toutiao.com/search?keyword=南航回应飞机餐发4个馒头1片白菜)
+1. [曝日本与越南关系拟升至“最高级”](https://so.toutiao.com/search?keyword=曝日本与越南关系拟升至“最高级”)
+1. [临沂马拉松冠军冲线时志愿者没松绳](https://so.toutiao.com/search?keyword=临沂马拉松冠军冲线时志愿者没松绳)
+1. [宋仲基海外试镜全部被淘汰](https://so.toutiao.com/search?keyword=宋仲基海外试镜全部被淘汰)
+1. [《庆余年2》公布新角色剧照](https://so.toutiao.com/search?keyword=《庆余年2》公布新角色剧照)
+1. [国美广东门店已全部关闭](https://so.toutiao.com/search?keyword=国美广东门店已全部关闭)
+1. [曝赵本山给徒弟补缴近亿税额](https://so.toutiao.com/search?keyword=曝赵本山给徒弟补缴近亿税额)
+1. [以军：地面部队做好进入加沙准备](https://so.toutiao.com/search?keyword=以军：地面部队做好进入加沙准备)
 1. [陈海贤：为何总遇到渣男渣女](https://so.toutiao.com/search?keyword=陈海贤：为何总遇到渣男渣女)
 1. [媒体：新足协能救中国足球吗](https://so.toutiao.com/search?keyword=媒体：新足协能救中国足球吗)
-1. [央广网：杜绝狗咬人要盯住养狗人](https://so.toutiao.com/search?keyword=央广网：杜绝狗咬人要盯住养狗人)
-1. [高中同学车祸失忆全班守护18年](https://so.toutiao.com/search?keyword=高中同学车祸失忆全班守护18年)
-1. [自然资源部发文建议取消地价上限](https://so.toutiao.com/search?keyword=自然资源部发文建议取消地价上限)
-1. [美欲阻止英伟达等出口高性能AI芯片](https://so.toutiao.com/search?keyword=美欲阻止英伟达等出口高性能AI芯片)
 1. [腾讯今年已决定关停数款应用](https://so.toutiao.com/search?keyword=腾讯今年已决定关停数款应用)
-1. [夫妻30岁裸辞旅行治愈百万网友](https://so.toutiao.com/search?keyword=夫妻30岁裸辞旅行治愈百万网友)
-1. [韩媒嘲讽中国男足：史上最差](https://so.toutiao.com/search?keyword=韩媒嘲讽中国男足：史上最差)
 1. [李想晒理想首款纯电MPV车型造型图](https://so.toutiao.com/search?keyword=李想晒理想首款纯电MPV车型造型图)
-1. [媒体评黄光裕遭国美App弹窗怒怼](https://so.toutiao.com/search?keyword=媒体评黄光裕遭国美App弹窗怒怼)
 1. [世预赛只剩1个月 国足主力还没着落](https://so.toutiao.com/search?keyword=世预赛只剩1个月+国足主力还没着落)
 1. [戴建业说诗歌教育是误入歧途](https://so.toutiao.com/search?keyword=戴建业说诗歌教育是误入歧途)
-1. [河南一楼盘现“豆腐渣”楼板](https://so.toutiao.com/search?keyword=河南一楼盘现“豆腐渣”楼板)
-1. [丹麦王室寻找遗落鞋子的“灰姑娘”](https://so.toutiao.com/search?keyword=丹麦王室寻找遗落鞋子的“灰姑娘”)
-1. [廖昌永追忆谷村新司](https://so.toutiao.com/search?keyword=廖昌永追忆谷村新司)
-1. [网传威马汽车创始人“出走”海外](https://so.toutiao.com/search?keyword=网传威马汽车创始人“出走”海外)
 1. [启辰大V氢燃料版实车曝光](https://so.toutiao.com/search?keyword=启辰大V氢燃料版实车曝光)
-1. [外交部回应日本歌手谷村新司去世](https://so.toutiao.com/search?keyword=外交部回应日本歌手谷村新司去世)
-1. [德国总理朔尔茨走红毯“迷路了”](https://so.toutiao.com/search?keyword=德国总理朔尔茨走红毯“迷路了”)
-1. [《庆余年2》公布新角色剧照](https://so.toutiao.com/search?keyword=《庆余年2》公布新角色剧照)
-1. [网友去台湾旅游总结8个特点](https://so.toutiao.com/search?keyword=网友去台湾旅游总结8个特点)
-1. [街道办回应男子自捆双脚跳河自尽](https://so.toutiao.com/search?keyword=街道办回应男子自捆双脚跳河自尽)
-1. [国美广东门店已全部关闭](https://so.toutiao.com/search?keyword=国美广东门店已全部关闭)
 1. [挂车疑似刹车过猛被铁柱贯穿](https://so.toutiao.com/search?keyword=挂车疑似刹车过猛被铁柱贯穿)
 1. [胡锡进：一带一路是贫富鸿沟缝合线](https://so.toutiao.com/search?keyword=胡锡进：一带一路是贫富鸿沟缝合线)
 1. [俄轰炸机在日本海中立海域上空巡航](https://so.toutiao.com/search?keyword=俄轰炸机在日本海中立海域上空巡航)
-1. [南航回应飞机餐发4个馒头1片白菜](https://so.toutiao.com/search?keyword=南航回应飞机餐发4个馒头1片白菜)
-1. [曝日本与越南关系拟升至“最高级”](https://so.toutiao.com/search?keyword=曝日本与越南关系拟升至“最高级”)
 1. [法拉第未来战略规划：减少外部依赖](https://so.toutiao.com/search?keyword=法拉第未来战略规划：减少外部依赖)
 1. [阿根廷总统：中国其实离阿根廷很近](https://so.toutiao.com/search?keyword=阿根廷总统：中国其实离阿根廷很近)
 1. [以色列货币“失血不止”](https://so.toutiao.com/search?keyword=以色列货币“失血不止”)
 1. [张若昀《庆余年》第二季杀青](https://so.toutiao.com/search?keyword=张若昀《庆余年》第二季杀青)
-1. [泰国副总理谈共建“一带一路”倡议](https://so.toutiao.com/search?keyword=泰国副总理谈共建“一带一路”倡议)
-1. [临沂马拉松冠军冲线时志愿者没松绳](https://so.toutiao.com/search?keyword=临沂马拉松冠军冲线时志愿者没松绳)
 1. [张若昀在杀青现场与粉丝合照](https://so.toutiao.com/search?keyword=张若昀在杀青现场与粉丝合照)
 1. [大学生私自取回自己的电动车被处分](https://so.toutiao.com/search?keyword=大学生私自取回自己的电动车被处分)
 1. [白岩松：盼海滩走失女童能找到](https://so.toutiao.com/search?keyword=白岩松：盼海滩走失女童能找到)
 1. [塞尔维亚随处可见中国元素](https://so.toutiao.com/search?keyword=塞尔维亚随处可见中国元素)
-1. [iPhone15Pro被曝生产成本523美元](https://so.toutiao.com/search?keyword=iPhone15Pro被曝生产成本523美元)
 1. [台报社论：民进党陷扩军备战死胡同](https://so.toutiao.com/search?keyword=台报社论：民进党陷扩军备战死胡同)
 1. [外媒记者谈“一带一路”见闻](https://so.toutiao.com/search?keyword=外媒记者谈“一带一路”见闻)
 1. [国美求助：部分银行断贷资金链紧张](https://so.toutiao.com/search?keyword=国美求助：部分银行断贷资金链紧张)
 1. [官方回应海陵岛骗秤：严查害群之马](https://so.toutiao.com/search?keyword=官方回应海陵岛骗秤：严查害群之马)
 1. [167名儿童被困在加沙地带的废墟中](https://so.toutiao.com/search?keyword=167名儿童被困在加沙地带的废墟中)
 1. [布林肯在以色列因空袭警报躲进地堡](https://so.toutiao.com/search?keyword=布林肯在以色列因空袭警报躲进地堡)
-1. [宋仲基海外试镜全部被淘汰](https://so.toutiao.com/search?keyword=宋仲基海外试镜全部被淘汰)
 1. [阿奇霉素“火出圈”](https://so.toutiao.com/search?keyword=阿奇霉素“火出圈”)
 1. [2024款奥迪A6L上市 售42.79万元起](https://so.toutiao.com/search?keyword=2024款奥迪A6L上市+售42.79万元起)
 1. [苹果将捐款2500万支持中国乡村发展](https://so.toutiao.com/search?keyword=苹果将捐款2500万支持中国乡村发展)
